# mycelium

./: .gitignore  Justfile  README.md  edge-hci-bridge.py  ubuntu-bumble.yaml
.cursor/: mcp.json
.dagger/src/: index.ts
.github/workflows/: ci.yaml  main.yaml
app/: package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: Retrieve.tsx  Shell.tsx  api.ts  main.tsx  schemas.ts
app/src-tauri/: Cargo.toml
app/src-tauri/src/: lib.rs  onboarding_ble.rs
app/src/backend-client/: api.ts
app/src/backend-client/.openapi-generator/: FILES
app/src/backend-client/docs/: DefaultApi.md  IntervalA.md  PlantProfile.md  PlantProfileVariables.md  Station.md  StationDetails.md  StationInsert.md  StationLog.md  StationMeasurement.md  StationPlantProfile.md  StationUpdate.md  Watered.md  Watering.md
app/src/components/: EventTimelineBar.tsx  MeasurementEventChart.tsx  PlantCard.tsx  PlantProfile.tsx  PlantProfileVariables.tsx
app/src/lib/: timeline.ts
app/src/pages/: HubAdd.tsx  PlantAvatarUpload.tsx  PlantEdit.tsx  PlantList.tsx  PlantView.tsx
backend/: .env.example  docker-compose.yml  openapi.json
backend/deployment/: image-tag.yaml
backend/src/main/resources/migrations/: V5__checkin_events.sql  V6__rename_soil_pf_to_soil_moisture.sql
backend/src/main/scala/co/mycelium/adapters/db/: DoobieRepositories.scala  DoobieStationMeasurementRepository.scala  DoobieStationProfileRepository.scala  DoobieStationWateringRepository.scala
backend/src/main/scala/co/mycelium/domain/: CheckinEvent.scala  GrowthPeriod.scala  MeasurementPeriod.scala  StationDetails.scala  StationMeasurement.scala  StationWatering.scala
backend/src/main/scala/co/mycelium/endpoints/: Stations.scala
backend/src/main/scala/co/mycelium/ports/: Repositories.scala
backend/src/main/scala/co/mycelium/service/: GrowthPeriodClassifier.scala  StationService.scala
backend/src/test/scala/co/mycelium/db/: DoobieStationMeasurementRepositoryTest.scala  DoobieStationWateringRepositoryTest.scala
backend/src/test/scala/co/mycelium/domain/: CheckinEventCodecTest.scala
backend/src/test/scala/co/mycelium/service/: GrowthPeriodClassifierTest.scala
edge-central/: .env.sample  Cargo.toml  README.md
edge-central/.cargo/: config.toml
edge-central/migrations/: 20250623120000_rename_soil_pf_to_soil_moisture.sql  20250716141346_add_soil_pf.sql  20250716141347_sync_sessions.sql
edge-hci-bridge/: Cargo.toml
edge-hci-bridge/src/: acl.rs  controller.rs  hci.rs  main.rs  radio.rs
edge-hci-bridge/src/radio/: linux.rs
edge-onboarding-ble/: Cargo.toml  build.rs  onboarding.proto
edge-onboarding-ble/src/: central.rs  lib.rs  peripheral.rs  proto.rs
edge-peripheral/: Cargo.toml  diagram.json  mycelium-plant-sim.chip.c  mycelium-plant-sim.chip.json  wokwi.toml
edge-peripheral/.cargo/: config.toml
edge-peripheral/docs/: ble-hci-uart.md
edge-peripheral/src/: ble.rs  gauge.rs  hci_uart.rs  main.rs  processor.rs  sim_processor.rs  soil_calibration.rs  state.rs  watering.rs  watering_policy.rs
edge-peripheral/src/utils/: rtc.rs
edge-peripheral/wokwi-chips/bh1730fvc/: README.md
edge-peripheral/wokwi-chips/plant-pot/: README.md
edge-peripheral/wokwi-chips/shtc3/: README.md
edge-peripheral/wokwi-chips/soil-sensor/: README.md
edge-protocol/: Cargo.toml  build.rs  v2.proto
edge-protocol/src/: gatt.rs  lib.rs  translate.rs  v2.rs  v2_proto.rs  wire.rs
preprov/: Dockerfile  README.md  seed.py
tasks/: plan.md  todo.md
