[package]
edition = "2021"
name    = "edge-central"
version = "0.1.0"

[dependencies]
edge-protocol = { path = "../edge-protocol" }
timeseries = { git = "https://github.com/Fristi/timeseries", rev = "869521bb62a99a101e8f0f7d60fadac2a2a046ba" }
edge-onboarding-ble = { path = "../edge-onboarding-ble" }
edge-client-backend = { path = "../clients/rs" }
tokio = { version = "1", features = ["full"] }
backon = "1.6.0"
rand = { version = "0.8.5", features = ["getrandom"] }
futures = "0.3.31"
anyhow = "1.0.98"
chrono = "0.4.41"
sqlx = { version = "=0.8.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "derive", "migrate", "macros" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = "0.4.2"
config = "0.14"
dotenv = "0.15.0"
async-trait = "0.1.88"
aliri_reqwest = "0.5.1"
aliri_tokens = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
predicates-core = "1.0.9"
reqwest-tracing = "0.5.8"
uuid = "1.18.1"
btleplug = "0.11.8"

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
# bluer + btleplug depend on D-Bus on Linux aarch64 (Orange Pi).
dbus = "0.9.9"
bluer = { version = "0.17", features = ["full"] }
ssd1306 = "0.10.0"
linux-embedded-hal = "0.4.1"
libc = "0.2"
embedded-graphics = "0.8.1"

[target.'cfg(all(target_os = "linux", target_arch = "aarch64", target_env = "musl"))'.dependencies]
# Statically link libdbus for musl cross-builds (no system libdbus in the toolchain sysroot).
dbus = { version = "0.9.9", features = ["vendored"] }

[dev-dependencies]
serial_test = "3.2.0"
