[package]
name = "edge-hci-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Linux HCI controller emulator bridging Wokwi ESP sim to BlueZ"

[[bin]]
name = "edge-hci-bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bt-hci = "0.8"
clap = { version = "4", features = ["derive"] }
edge-protocol = { path = "../edge-protocol" }
embassy-sync = "0.7"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["full"] }
dbus = "0.9"
