[package]
name = "edge-peripheral"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
chrono = { version = "0.4.41", default-features = false }
nb = "1.1.0"
shtcx2 = "0.1"
bh1730fvc = "0.2"
timeseries = { git = "https://github.com/Fristi/timeseries", rev = "869521bb62a99a101e8f0f7d60fadac2a2a046ba" }
edge-protocol = { path = "../edge-protocol", features = ["gatt"] }
log = "0.4.29"

embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = [] }

embassy-executor = "0.10.0"
embassy-time = "0.5.0"
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
static_cell = "2.1.1"
trouble-host = { version = "0.6.0", features = ["default-packet-pool-mtu-255"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }
esp-backtrace = { version = "0.19.0", features = ["panic-handler", "println", "esp32"] }
esp-hal = { version = "1.1.1", features = ["unstable", "esp32", "log-04"] }
esp-alloc = { version = "0.10.0" }
esp-println = { version = "0.17.0", features = ["log-04", "esp32"] }
esp-radio = { version = "0.18.0", features = ["ble", "log-04", "unstable", "esp32"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "esp-alloc", "esp-radio", "log-04", "esp32"] }
embedded-hal-compat = "0.13"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = "s"
overflow-checks = false
