[package]
name = "edge-peripheral"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["hardware"]
sim = [
    "edge-protocol/gatt",
    "dep:trouble-host",
    "dep:bt-hci",
    "dep:embedded-io",
    "dep:embedded-io-async",
    "dep:embassy-sync-08",
]
hardware = ["edge-protocol/gatt", "dep:esp-radio", "dep:trouble-host", "esp-rtos/esp-radio"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
chrono = { version = "0.4.41", default-features = false }
nb = "1.1.0"
shtcx2 = "0.1"
bh1730fvc = "0.2"
timeseries = { git = "https://github.com/Fristi/timeseries", rev = "869521bb62a99a101e8f0f7d60fadac2a2a046ba" }
edge-protocol = { path = "../edge-protocol" }
heapless = "0.8"
log = "0.4.29"

embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = [] }

embassy-executor = "0.10.0"
embassy-time = "0.5.0"
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-sync-08 = { package = "embassy-sync", version = "0.8.0", optional = true }
static_cell = "2.1.1"
trouble-host = { version = "0.6.0", features = ["default-packet-pool-mtu-255"], optional = true }
bt-hci = { version = "0.8", features = ["uuid"], optional = true }
embedded-io = { version = "0.7", optional = true }
embedded-io-async = { version = "0.7", optional = true }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }
esp-backtrace = { version = "0.19.0", features = ["panic-handler", "println", "esp32"] }
esp-hal = { version = "1.1.1", features = ["unstable", "esp32", "log-04"] }
esp-alloc = { version = "0.10.0" }
esp-println = { version = "0.17.0", default-features = false, features = ["log-04", "no-op", "esp32"] }
esp-radio = { version = "0.18.0", features = ["ble", "log-04", "unstable", "esp32"], optional = true }
esp-rtos = { version = "0.3.0", features = ["embassy", "esp-alloc", "log-04", "esp32"] }
embedded-hal-compat = "0.13"

[patch.crates-io]
trouble-host = { path = "vendor/trouble-host" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = "s"
overflow-checks = false
